[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/Comfortaa/Comfortaa-VariableFont_wght.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/UI.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="P1score" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 16.0
margin_right = -821.0
margin_bottom = -538.0
custom_fonts/font = SubResource( 1 )
text = "P1: 0"
align = 1
valign = 1

[node name="P2score" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 825.0
margin_top = 16.0
margin_right = -36.0
margin_bottom = -538.0
custom_fonts/font = SubResource( 3 )
text = "P2: 0"
align = 1
valign = 1

[node name="TimeLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 440.0
margin_top = 17.0
margin_right = -440.0
margin_bottom = -537.0
custom_fonts/font = SubResource( 2 )
text = "Time: 0"
align = 1
valign = 1

[node name="gameTimer" type="Timer" parent="."]

[connection signal="timeout" from="gameTimer" to="." method="_on_gameTimer_timeout"]
